// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlpSandbox init add default libs if no libs in manifest.json 1`] = `"sap.m,sap.ui.core,sap.ushell"`;

exports[`FlpSandbox init additional apps 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=my.id",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "",
      "title": "my.id",
      "url": "..",
    },
    "myObject-action": Object {
      "additionalInformation": "SAPUI5.Component=test.fe.v2.other",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "This is a very simple application.",
      "title": "My Other App",
      "url": "/yet/another/app",
    },
    "myRemoteObject-action": Object {
      "additionalInformation": "SAPUI5.Component=myRemoteComponent",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "",
      "title": "myRemoteObject-action",
      "url": "/a/remote/app",
    },
    "testfev2app-preview": Object {
      "additionalInformation": "SAPUI5.Component=test.fe.v2.app",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "This is a very simple application.",
      "title": "My Simple App",
      "url": "/simple/app",
    },
  },
  "basePath": "..",
  "init": undefined,
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "connector": "LrepConnector",
        "layers": Array [],
        "url": "/sap/bc/lrep",
      },
      Object {
        "applyConnector": "custom.connectors.WorkspaceConnector",
        "custom": true,
        "writeConnector": "custom.connectors.WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell",
    "resources": Object {
      "my.id": "..",
      "myRemoteComponent": "/a/remote/app",
      "open.ux.preview.client": "../preview/client",
      "test.fe.v2.app": "/simple/app",
      "test.fe.v2.other": "/yet/another/app",
    },
    "theme": "sap_horizon",
  },
}
`;

exports[`FlpSandbox init i18n manifest 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=my.id",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "My App Description",
      "title": "My App",
      "url": "..",
    },
  },
  "basePath": "..",
  "init": undefined,
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "connector": "LrepConnector",
        "layers": Array [],
        "url": "/sap/bc/lrep",
      },
      Object {
        "applyConnector": "custom.connectors.WorkspaceConnector",
        "custom": true,
        "writeConnector": "custom.connectors.WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell",
    "resources": Object {
      "my.id": "..",
      "open.ux.preview.client": "../preview/client",
    },
    "theme": "sap_horizon",
  },
}
`;

exports[`FlpSandbox init i18n manifest w/o bundle 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=my.id",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "myDifferentDescription",
      "title": "myDifferentTitle",
      "url": "..",
    },
  },
  "basePath": "..",
  "init": undefined,
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "connector": "LrepConnector",
        "layers": Array [],
        "url": "/sap/bc/lrep",
      },
      Object {
        "applyConnector": "custom.connectors.WorkspaceConnector",
        "custom": true,
        "writeConnector": "custom.connectors.WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell",
    "resources": Object {
      "my.id": "..",
      "open.ux.preview.client": "../preview/client",
    },
    "theme": "sap_horizon",
  },
}
`;

exports[`FlpSandbox init i18n manifest with unknown propertyI18nKey 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=my.id",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "myOtherDescription",
      "title": "myOtherTitle",
      "url": "..",
    },
  },
  "basePath": "..",
  "init": undefined,
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "connector": "LrepConnector",
        "layers": Array [],
        "url": "/sap/bc/lrep",
      },
      Object {
        "applyConnector": "custom.connectors.WorkspaceConnector",
        "custom": true,
        "writeConnector": "custom.connectors.WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell",
    "resources": Object {
      "my.id": "..",
      "open.ux.preview.client": "../preview/client",
    },
    "theme": "sap_horizon",
  },
}
`;

exports[`FlpSandbox init minimal manifest 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=my.id",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "",
      "title": "my.id",
      "url": "..",
    },
  },
  "basePath": "..",
  "init": undefined,
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "connector": "LrepConnector",
        "layers": Array [],
        "url": "/sap/bc/lrep",
      },
      Object {
        "applyConnector": "custom.connectors.WorkspaceConnector",
        "custom": true,
        "writeConnector": "custom.connectors.WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell",
    "resources": Object {
      "my.id": "..",
      "open.ux.preview.client": "../preview/client",
    },
    "theme": "sap_horizon",
  },
}
`;

exports[`FlpSandbox init optional configurations 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=test.fe.v2.app",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "This is a very simple application.",
      "title": "My Simple App",
      "url": "..",
    },
  },
  "basePath": "..",
  "init": undefined,
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "connector": "LrepConnector",
        "layers": Array [],
        "url": "/sap/bc/lrep",
      },
      Object {
        "applyConnector": "custom.connectors.WorkspaceConnector",
        "custom": true,
        "writeConnector": "custom.connectors.WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template",
    "resources": Object {
      "open.ux.preview.client": "../preview/client",
      "test.fe.v2.app": "..",
    },
    "theme": "sap_horizon_dark",
  },
}
`;

exports[`FlpSandbox init reuse libs not part of data-sap-ui-libs 1`] = `"sap.ui.core,sap.m,sap.ushell"`;

exports[`FlpSandbox init ui5Theme 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=test.fe.v2.app",
      "applicationDependencies": Object {
        "manifest": true,
      },
      "applicationType": "URL",
      "description": "This is a very simple application.",
      "title": "My Simple App",
      "url": "..",
    },
  },
  "basePath": "..",
  "init": undefined,
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "connector": "LrepConnector",
        "layers": Array [],
        "url": "/sap/bc/lrep",
      },
      Object {
        "applyConnector": "custom.connectors.WorkspaceConnector",
        "custom": true,
        "writeConnector": "custom.connectors.WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template",
    "resources": Object {
      "open.ux.preview.client": "../preview/client",
      "test.fe.v2.app": "..",
    },
    "theme": "sap_fiori_3",
  },
}
`;

exports[`FlpSandbox router GET /preview/api/changes 1`] = `"{\\"sap.ui.fl.myid\\":{\\"id\\":\\"myId\\"}}"`;

exports[`FlpSandbox router custom opa5 path test/integration/opaTests.qunit.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
	<title>OPA5 tests</title>
	<meta charset=\\"utf-8\\">

	<script
		src=\\"../../resources/sap-ui-core.js\\"
		data-sap-ui-theme='sap_horizon_dark'
		data-sap-ui-resourceroots='{
			\\"test.fe.v2.app\\": \\"../..\\"
		}'
		data-sap-ui-animation=\\"false\\"
		data-sap-ui-compatVersion=\\"edge\\"
		data-sap-ui-async=\\"true\\">
	</script>

	<script src=\\"opaTests.qunit.js\\"></script>

	<link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"../../resources/sap/ui/thirdparty/qunit-2.css\\">
</head>
<body>
	<div id=\\"qunit\\"></div>
	<div id=\\"qunit-fixture\\"></div>
</body>
</html>"
`;

exports[`FlpSandbox router default Qunit init test/unitTests.qunit.js 1`] = `
"sap.ui.loader.config({
    shim: {
        \\"sap/ui/qunit/qunit-junit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/qunit/qunit-coverage\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/thirdparty/sinon-qunit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon\\"]
        },
        \\"sap/ui/qunit/sinon-qunit-bridge\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon-4\\"]
        }
    }
});

window.QUnit = Object.assign({}, window.QUnit, { config: { autostart: false } });

sap.ui.require([
    \\"sap/ui/thirdparty/qunit-2\\",
    \\"sap/ui/qunit/qunit-junit\\",
    \\"sap/ui/qunit/qunit-coverage\\"
], function (QUnit) {
    'use strict';
    sap.ui.require([], function() {
        QUnit.start();
    });
});"
`;

exports[`FlpSandbox router default Qunit path test/unitTests.qunit.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
	<title>QUnit tests</title>
	<meta charset=\\"utf-8\\">

	<script
		src=\\"../resources/sap-ui-core.js\\"
		data-sap-ui-theme='sap_horizon_dark'
		data-sap-ui-resourceroots='{
			\\"test.fe.v2.app\\": \\"..\\"
		}'
		data-sap-ui-animation=\\"false\\"
		data-sap-ui-compatVersion=\\"edge\\"
		data-sap-ui-async=\\"true\\">
	</script>

	<script src=\\"unitTests.qunit.js\\"></script>

	<link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"../resources/sap/ui/thirdparty/qunit-2.css\\">
</head>
<body>
	<div id=\\"qunit\\"></div>
	<div id=\\"qunit-fixture\\"></div>
</body>
</html>"
`;

exports[`FlpSandbox router editor with config 1`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\",\\"applicationDependencies\\":{\\"manifest\\":true}},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\",\\"applicationDependencies\\":{\\"manifest\\":true}}}
        };
    </script>

    <script type=\\"text/javascript\\">
        window[\\"data-open-ux-preview-basePath\\"] = \\"..\\";
    </script>

    <script src=\\"../preview/client/flp/bootstrap.js\\" id=\\"preview-bootstrap\\"></script>
    <script id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template,sap.ui.rta\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"connector\\":\\"LrepConnector\\",\\"layers\\":[],\\"url\\":\\"/sap/bc/lrep\\"},{\\"applyConnector\\":\\"custom.connectors.WorkspaceConnector\\",\\"writeConnector\\":\\"custom.connectors.WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"../preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-xx-designMode=\\"true\\"
        data-sap-ui-xx-suppressDeactivationOfControllerCode=\\"true\\"
        data-sap-ui-xx-viewCache=\\"false\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\">
    </script>


</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>

</html>"
`;

exports[`FlpSandbox router rta 1`] = `"Found. Redirecting to /my/rta.html?fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true"`;

exports[`FlpSandbox router rta with developerMode=true 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
    <head>
        <meta charset=\\"utf-8\\" />
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
        <meta name=\\"theme-color\\" content=\\"#000000\\" />
        <meta name=\\"description\\" content=\\"Web page for rendering SAP Fiori Tools Control Property Editor\\" />
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"./editor/app.css\\" />
        <title>Editing test.fe.v2.app</title>
    </head>
    <body>
        <noscript>You need to enable JavaScript to run this app.</noscript>
        <div id=\\"root\\"></div>
        <script type=\\"module\\">
            import { start } from './editor/app.js';
            start({
                previewUrl: '/my/editor.html.inner.html?sap-ui-xx-viewCache=false&fiori-tools-rta-mode=forAdaptation&sap-ui-rta-skip-flex-validation=true&sap-ui-xx-condense-changes=true#app-preview',
                telemetry: false,
                rootElementId: 'root',
                scenario: '',
                livereloadPort: 35729,
                livereloadUrl: '',
            });
        </script>
    </body>
    <!-- livereload disabled for editor </body>-->
</html>
"
`;

exports[`FlpSandbox router rta with developerMode=true 2`] = `"Found. Redirecting to /my/editor.html.inner.html?fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true"`;

exports[`FlpSandbox router rta with developerMode=true and plugin 1`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\",\\"applicationDependencies\\":{\\"manifest\\":true}},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\",\\"applicationDependencies\\":{\\"manifest\\":true}}}
        };
    </script>

    <script type=\\"text/javascript\\">
        window[\\"data-open-ux-preview-basePath\\"] = \\"..\\";
    </script>

    <script src=\\"../preview/client/flp/bootstrap.js\\" id=\\"preview-bootstrap\\"></script>
    <script id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template,sap.ui.rta\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"connector\\":\\"LrepConnector\\",\\"layers\\":[],\\"url\\":\\"/sap/bc/lrep\\"},{\\"applyConnector\\":\\"custom.connectors.WorkspaceConnector\\",\\"writeConnector\\":\\"custom.connectors.WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"../preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-xx-designMode=\\"true\\"
        data-sap-ui-xx-suppressDeactivationOfControllerCode=\\"true\\"
        data-sap-ui-xx-viewCache=\\"false\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\"
        data-open-ux-preview-flex-settings='{\\"layer\\":\\"CUSTOMER_BASE\\",\\"baseId\\":\\"test.fe.v2.app\\",\\"appName\\":\\"test.fe.v2.app\\",\\"generator\\":\\"@sap-ux/control-property-editor\\",\\"developerMode\\":true,\\"pluginScript\\":\\"open/ux/tools/plugin\\"}'>
    </script>


        <!-- Hides Rta native toolbar  -->
    <style>
        #shell-header, .sapUiRtaToolbar {
            visibility: hidden;
            height: 1px;
        }
        .sapUshellShellCanvas {
            top: 0 !important;
        }
        .sapUiRtaMode .sapUiShellBackgroundImage.sapUiGlobalBackgroundImageForce.sapUshellShellBG {
            background-color: transparent !important;
        }
    </style>
</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>
<!-- livereload disabled for editor </body>-->

</html>"
`;

exports[`FlpSandbox router rta with editors path without leading "/" 1`] = `"Found. Redirecting to /without/slash/rta.html?fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true"`;

exports[`FlpSandbox router rta with url parameters 1`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\",\\"applicationDependencies\\":{\\"manifest\\":true}},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\",\\"applicationDependencies\\":{\\"manifest\\":true}}}
        };
    </script>

    <script type=\\"text/javascript\\">
        window[\\"data-open-ux-preview-basePath\\"] = \\"..\\";
    </script>

    <script src=\\"../preview/client/flp/bootstrap.js\\" id=\\"preview-bootstrap\\"></script>
    <script id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template,sap.ui.rta\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"connector\\":\\"LrepConnector\\",\\"layers\\":[],\\"url\\":\\"/sap/bc/lrep\\"},{\\"applyConnector\\":\\"custom.connectors.WorkspaceConnector\\",\\"writeConnector\\":\\"custom.connectors.WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"../preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\"
        data-open-ux-preview-flex-settings='{\\"layer\\":\\"CUSTOMER_BASE\\",\\"baseId\\":\\"test.fe.v2.app\\",\\"appName\\":\\"test.fe.v2.app\\",\\"generator\\":\\"@sap-ux/preview-middleware\\",\\"developerMode\\":false}'>
    </script>


</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>
<!-- livereload disabled for editor </body>-->

</html>"
`;

exports[`FlpSandbox router test/flp.html 1`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\",\\"applicationDependencies\\":{\\"manifest\\":true}},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\",\\"applicationDependencies\\":{\\"manifest\\":true}}}
        };
    </script>

    <script type=\\"text/javascript\\">
        window[\\"data-open-ux-preview-basePath\\"] = \\"..\\";
    </script>

    <script src=\\"../preview/client/flp/bootstrap.js\\" id=\\"preview-bootstrap\\"></script>
    <script id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"connector\\":\\"LrepConnector\\",\\"layers\\":[],\\"url\\":\\"/sap/bc/lrep\\"},{\\"applyConnector\\":\\"custom.connectors.WorkspaceConnector\\",\\"writeConnector\\":\\"custom.connectors.WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"../preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\">
    </script>


</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>

</html>"
`;

exports[`FlpSandbox router with test suite default with testsuite 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
    <title>QUnit TestSuite</title>
    <script src=\\"../resources/sap/ui/qunit/qunit-redirect.js\\"></script>
    <script src=\\"/test/testsuite.qunit.js\\" data-sap-ui-testsuite></script>
</head>
<body>
</body>
</html>"
`;

exports[`FlpSandbox router with test suite default with testsuite and init testsuite.qunit.js 1`] = `
"window.suite = function () {
    const oSuite = new parent.jsUnitTestSuite();
    var sContextPath = location.pathname.substring(0, location.pathname.lastIndexOf(\\"/\\") + 1);

    oSuite.addTestPage(sContextPath + \\"unitTests.qunit.html\\");

    oSuite.addTestPage(sContextPath + \\"opaTests.qunit.html\\");

    return oSuite;
}"
`;
